--- a/usr.sbin/bhyve/Makefile
+++ b/usr.sbin/bhyve/Makefile
@@ -109,7 +109,9 @@ LIBADD+=    netgraph
 CFLAGS+=-DNO_OPENSSL
 .endif
 
-.if exists(${BHYVE_SRCTOP}/${MACHINE_ARCH})
+.if exists(${BHYVE_SRCTOP}/${MACHINE})
+BHYVE_ARCH=	${MACHINE}
+.elif exists(${BHYVE_SRCTOP}/${MACHINE_ARCH})
 BHYVE_ARCH=	${MACHINE_ARCH}
 .else
 BHYVE_ARCH=	${MACHINE_CPUARCH}
