--- a/sys/modules/Makefile
+++ b/sys/modules/Makefile
@@ -594,6 +594,9 @@ _allwinner=	allwinner
 _armv8crypto=	armv8crypto
 _em=		em
 _rockchip=	rockchip
+.if ${MK_BHYVE} != "no" || defined(ALL_MODULES)
+_vmm=		vmm
+.endif
 .endif
 
 .if ${MACHINE_CPUARCH} == "i386" || ${MACHINE_CPUARCH} == "amd64"
