--- a/usr.sbin/bhyve/Makefile
+++ b/usr.sbin/bhyve/Makefile
@@ -3,148 +3,7 @@
 #
 
 .include <src.opts.mk>
-CFLAGS+=-I${SRCTOP}/sys
-.PATH:  ${SRCTOP}/sys/cam/ctl
 
-PROG=	bhyve
-PACKAGE=	bhyve
-
-MAN=	bhyve.8
-
-BHYVE_SYSDIR?=${SRCTOP}
-BHYVE_SRCTOP?=${.CURDIR}
-
-
-
-
-
-.if exists(${BHYVE_SRCTOP}/${MACHINE})
-BHYVE_ARCH=	${MACHINE}
-.elif exists(${BHYVE_SRCTOP}/${MACHINE_ARCH})
-BHYVE_ARCH=	${MACHINE_ARCH}
-.else
-BHYVE_ARCH=	${MACHINE_CPUARCH}
-.endif
-
-SRCS=	\
-	block_if.c		\
-	iov.c			\
-	mevent.c		\
-	net_backends.c		\
-	sockstream.c
-
-.if ${BHYVE_ARCH} != "amd64"
-# Missing vm_get_ioctls
-CFLAGS+=	-DWITHOUT_CAPSICUM
-.include "${BHYVE_SRCTOP}/${BHYVE_ARCH}/Makefile.inc"
-.include "${BHYVE_SRCTOP}/${BHYVE_BUS}/Makefile.inc"
-
-.else
-SRCS+=	\
-        acpi.c			\
-        atkbdc.c		\
-        audio.c			\
-        bhyvegc.c		\
-        bhyverun.c		\
-        bootrom.c		\
-        console.c		\
-        consport.c		\
-        ctl_scsi_all.c		\
-        ctl_util.c		\
-        dbgport.c		\
-        fwctl.c			\
-        gdb.c			\
-        hda_codec.c		\
-        inout.c			\
-        ioapic.c		\
-        mem.c			\
-        mptbl.c			\
-        net_utils.c		\
-        pci_ahci.c		\
-        pci_e82545.c		\
-        pci_emul.c		\
-        pci_fbuf.c		\
-        pci_hda.c		\
-        pci_hostbridge.c	\
-        pci_irq.c		\
-        pci_lpc.c		\
-        pci_nvme.c		\
-        pci_passthru.c		\
-        pci_uart.c		\
-        pci_virtio.c		\
-        pci_virtio_block.c	\
-        pci_virtio_console.c	\
-        pci_virtio_net.c	\
-        pci_virtio_rnd.c	\
-        pci_virtio_scsi.c	\
-        pci_xhci.c		\
-        pm.c			\
-        post.c			\
-        ps2kbd.c		\
-        ps2mouse.c		\
-        rfb.c			\
-        rtc.c			\
-        smbiostbl.c		\
-        spinup_ap.c		\
-        task_switch.c		\
-        uart_emul.c		\
-        usb_emul.c		\
-        usb_mouse.c		\
-        vga.c			\
-        xmsr.c
-
-.endif
-
-LIBADD=	vmmapi md pthread
-.if ${MACHINE_CPUARCH} == "amd64"
-LIBADD+= z util sbuf cam crypto
-CFLAGS+=	-I${BHYVE_SYSDIR}/sys/dev/e1000
-CFLAGS+=	-I${BHYVE_SYSDIR}/sys/dev/mii
-CFLAGS+=	-I${BHYVE_SYSDIR}/sys/dev/usb/controller
-.endif
-
-.if ${MK_INET_SUPPORT} != "no"
-CFLAGS+=-DINET
-.endif
-.if ${MK_INET6_SUPPORT} != "no"
-CFLAGS+=-DINET6
-.endif
-.if ${MK_NETGRAPH_SUPPORT} != "no"
-CFLAGS+=-DNETGRAPH
-LIBADD+=    netgraph
-.endif
-.if ${MK_OPENSSL} == "no"
-CFLAGS+=-DNO_OPENSSL
-.endif
-
-.if exists(${BHYVE_SRCTOP}/${MACHINE})
-BHYVE_ARCH=	${MACHINE}
-.elif exists(${BHYVE_SRCTOP}/${MACHINE_ARCH})
-BHYVE_ARCH=	${MACHINE_ARCH}
-.else
-BHYVE_ARCH=	${MACHINE_CPUARCH}
-.endif
-
-.if ${MK_BHYVE_SNAPSHOT} != "no"
-CFLAGS+= -I${SRCTOP}/contrib/libucl/include
-
-# Temporary disable capsicum, until we integrate checkpoint code with it.
-CFLAGS+= -DWITHOUT_CAPSICUM
-
-CFLAGS+= -DBHYVE_SNAPSHOT
-.endif
-.PATH:	${BHYVE_SYSDIR}/sys/${BHYVE_ARCH}/vmm
-SRCS+=	vmm_instruction_emul.c
-
-CFLAGS+=	-I${BHYVE_SRCTOP}
-CFLAGS+=	-I${BHYVE_SRCTOP}/${BHYVE_ARCH}
-CFLAGS+= 	-I${BHYVE_SYSDIR}/sys/dev/virtio
-CFLAGS+= 	-I${BHYVE_SYSDIR}/sys/dev/virtio/console
-
-.ifdef GDB_LOG
-CFLAGS+=-DGDB_LOG
-.endif
-
-WARNS?=	2
+.include <bsd.arch.inc.mk>
 
 .include <bsd.prog.mk>
